Fix overflow for dashboard cards, consistent font styles, consistent color scheme

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,6 @@
 
 @import './sass/variables';
 
-
-
-// @import url('https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');
-
 * {
   box-sizing: border-box;
 }
@@ -13,15 +8,15 @@
 body{
   min-height: 100vh;
   width: 100%;
-  // font-family: 'Anton', sans-serif;
   font-family: 'Oswald', sans-serif;
   font-weight:200;
   color:$font-color;
-  // font-family:'Sulphur Point', sans-serif;
 }
 
 .App {
   min-height: 100vh;
   background-color: #022831;
+  color-scheme: dark;
+  
 }
 
