--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -1,5 +1,4 @@
 @import '../../sass/variables.scss';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');
 
 .homepage {
   height: 80vh;
@@ -21,7 +20,7 @@
   padding: 5%;
   color: $font-color;
   text-align:center;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: $main-font;
 
   h1 {
     font-size: 3rem;
@@ -58,7 +57,7 @@
   color: white;
   font-size: 1.5rem;
   padding: 15px 20px;
-  font-family: 'Oswald', sans-serif;
+  font-family: $button-font;
   position: relative;
   z-index:100;
   transition:all 300ms ease;
@@ -77,7 +76,7 @@
   }
 }
 
-.aliens-img{
+.calendar-img{
   width: 45vw;
   height: auto;
   position: relative;
